fix event overlap in right column when there are too many events

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -241,7 +241,7 @@ hr {
 .event-item {
   background-color: white;
   border-bottom: thin solid black;
-  //height: 100%;
+  height: 100%;
   padding-left: 8px;
   padding-top: 8px;
   width: 100%;
